--- a/PanArctic_DSL_figures.Rmd
+++ b/PanArctic_DSL_figures.Rmd
@@ -98,8 +98,7 @@ SA_grid_laea <- SA_grid_laea %>%
                          LME == "Northern Canadian Archipelago LME" ~
                            "NAR"),
          LME = factor(if_else(LME == "CAO" & yc <= 0, "SV",
-                      if_else(LME == "CAO" & yc > 0, "BF",
-                      if_else(LME == "NAR", "BB", LME))),
+                      if_else(LME == "CAO" & yc > 0, "BF", LME)),
                       levels = c("BF", "NAR", "BB", "SV"))) %>%
   droplevels()
 
@@ -124,7 +123,34 @@ chl_grid_laea_hd <- chl_grid_laea %>%
 
 # Statistics
 load("data/statistics/LM_results.RData")
+SA_lm <- SA_lm %>%
+  mutate(shape = factor(if_else(LME == "NAR", 0, 1)),
+         LME = factor(case_when(LME == "BF" ~ "Beaufort Sea",
+                                LME == "NAR" ~ "Nares Strait",
+                                LME == "BB" ~ "Baffin Bay",
+                                LME == "SV" ~ "Barents Sea"),
+                      levels = c("Beaufort Sea", "Baffin Bay",
+                                 "Barents Sea", "Nares Strait")))
+LM_area_res <- LM_area_res %>%
+    mutate(LME = factor(case_when(LME == "BF" ~ "Beaufort Sea",
+                                LME == "NAR" ~ "Nares Strait",
+                                LME == "BB" ~ "Baffin Bay",
+                                LME == "SV" ~ "Barents Sea"),
+                      levels = c("Beaufort Sea", "Baffin Bay",
+                                 "Barents Sea", "Nares Strait")))
 load("data/statistics/GAMSA_results.RData")
+predSA_I <- predSA_I %>%
+  mutate(LME = factor(case_when(LME == "BF" ~ "Beaufort Sea",
+                                LME == "BB" ~ "Baffin Bay",
+                                LME == "SV" ~ "Barents Sea"),
+                      levels = c("Beaufort Sea", "Baffin Bay", 
+                                 "Barents Sea")))
+SA_df <- SA_df %>%
+  mutate(LME = factor(case_when(LME == "BF" ~ "Beaufort Sea",
+                                LME == "BB" ~ "Baffin Bay",
+                                LME == "SV" ~ "Barents Sea"),
+                      levels = c("Beaufort Sea", "Baffin Bay", 
+                                 "Barents Sea")))
 ```
 
 I re-project data from the WGS84 projection to the EASE-Grid 2.0 North projection.
@@ -625,7 +651,7 @@ p_Sv_prof_points <- Sv_grid_laea %>%
   group_by(depth_round, IHO_area, year, xc, yc) %>%
   summarise(sv_lin = median(sv_lin_q0.50)) %>%
   ungroup() %>%
-  mutate(Sv_median = 10*log10(sv_lin)) %>%
+  mutate(Sv_median = 10 * log10(sv_lin)) %>%
   filter(Sv_median != -999) %>%
   ggplot() +
   geom_vline(xintercept = 200, col = "red", lty = 2) +
@@ -663,7 +689,7 @@ p_Sv_prof_boxplot <- Sv_grid_laea %>%
   group_by(depth_round, IHO_area, year, xc, yc) %>%
   summarise(sv_lin = median(sv_lin_q0.50)) %>%
   ungroup() %>%
-  mutate(Sv_median = 10*log10(sv_lin), 
+  mutate(Sv_median = 10 * log10(sv_lin), 
          depth = factor(depth_round)) %>%
   filter(Sv_median != -999) %>%
   ggplot() +
@@ -725,16 +751,13 @@ map_DSL <- SA_grid_laea %>%
 # Bxplot SA
 p_boxplot_SA <-
   SA_grid_laea %>% # Boxplot of SA per region
-  mutate(IHO_area = factor(
-    case_when(IHO_area == "East Arctic Ocean" ~ "East Arctic\nOcean",
-              IHO_area == "West Arctic Ocean" ~ "West Arctic\nOcean",
-              IHO_area == "Beaufort Sea" ~ "Beaufort Sea",
-              IHO_area == "The Northwestern Passages" ~ "Can. Arctic\nArchipelago",
-              IHO_area == "Baffin Bay" ~ "Baffin Bay",
-              IHO_area == "Davis Strait" ~ "Davis Strait"),
-    levels = c("West Arctic\nOcean", "Beaufort Sea", "Can. Arctic\nArchipelago",
-               "Baffin Bay", "Davis Strait", "East Arctic\nOcean"))) %>%
-  ggplot(aes(x = IHO_area, y = SA_int)) + 
+  mutate(LME = factor(case_when(LME == "BF" ~ "Beaufort Sea",
+                                LME == "NAR" ~ "Nares Strait",
+                                LME == "BB" ~ "Baffin Bay",
+                                LME == "SV" ~ "Barents Sea"),
+                      levels = c("Beaufort Sea", "Nares Strait", 
+                                 "Baffin Bay", "Barents Sea"))) %>%
+  ggplot(aes(x = LME, y = SA_int)) + 
   geom_boxplot(position = position_dodge(preserve = "single")) +
   scale_y_continuous(expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")")) +
   theme(panel.border = element_blank(),
@@ -758,7 +781,6 @@ p_map_SA_DSL
 ```{r fig3-map-points}
 map_DSL <- SA_grid_laea %>% 
   mutate(NASC_int_d = cut(NASC_int, c(0, 1, 10, 100, 500, 1000, Inf))) %>%
-  # mutate(NASC_int_d = cut(NASC_int, c(0, 1, 5, 10, 50, 100, 500, 1000, 5000, 10000, Inf), right = F)) %>%
   ggplot(aes(x = xc,  y = yc)) +
   geom_raster(data = bathy_laea, aes(x = xc, y = yc, fill = depth_d), 
               alpha = 0.8) + # bathy
@@ -769,60 +791,46 @@ map_DSL <- SA_grid_laea %>%
                col = "black", fill = NA, lwd = 0.3, alpha = 1) + # LME
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), 
                fill = "grey25") + # Coast
-  # geom_point(aes(col = NASC_int_d), size = 0.6) +
-  # scale_color_viridis_d(option = "plasma", 
-  #                       labels = c("< 1", "1-10", "11-100", "101-1000", 
-  #                                  "1001-10000", "> 10000")) +
   geom_tile(aes(fill = NASC_int_d), size = 0.2, col = "white") +
   scale_fill_viridis_d(expression("s"[A]*" ( m"^2*" nmi"^-2*")"),
                        option = "viridis",
                        labels = c("< 1", "1-10", "11-100", "101-500",
                                   "501-1000", "> 1000")) +
-  # scale_fill_viridis_d(expression("s"[A]*" ( m"^2*" nmi"^-2*")"),
-  #                      option = "viridis",
-  #                      labels = c("< 1", "1-4", "5-9", "10-49", "50-99",
-  #                                 "100-499", "500-999", "≥ 1000")) +
   geom_point(aes(x = 0, y = 0), size = 0.05) +
   facet_wrap(~ year) +
   coord_fixed(xlim = c(-2450, 650), ylim = c(-1500, 1850), expand = F) +
-  # coord_fixed(xlim = c(-2600, 1100), ylim = c(-1600, 1900), expand = F) +
-  # guides(fill = guide_legend(nrow = 2, byrow = T)) +
   theme(legend.position = "right",
         legend.key.height = unit(0.15, "in"),
         legend.key.width = unit(0.15, "in"),
-        # legend.title = element_blank(),
         axis.text = element_blank(),
         axis.ticks = element_blank(),
         axis.title = element_blank())
 
 pointrange_NASC <- SA_grid_laea %>% # Pointrange of SA per region
-  mutate(IHO_area = factor(
-    case_when(
-    IHO_area == "East Arctic Ocean" ~ "East Arctic\nOcean",
-    IHO_area == "West Arctic Ocean" ~ "West Arctic\nOcean",
-    IHO_area == "Beaufort Sea" ~ "Beaufort Sea",
-    IHO_area == "The Northwestern Passages" ~ "Can. Arctic\nArchipelago",
-    IHO_area == "Baffin Bay" ~ "Baffin Bay",
-    IHO_area == "Davis Strait" ~ "Davis Strait"),
-    levels = c("West Arctic\nOcean", "Beaufort Sea", "Can. Arctic\nArchipelago",
-               "Baffin Bay", "Davis Strait", "East Arctic\nOcean"))) %>%
-  group_by(IHO_area, year) %>% # Median per year
+  mutate(LME = factor(case_when(LME == "BF" ~ "Beaufort Sea",
+                                LME == "NAR" ~ "Nares Strait",
+                                LME == "BB" ~ "Baffin Bay",
+                                LME == "SV" ~ "Barents Sea"),
+                      levels = c("Beaufort Sea", "Nares Strait", 
+                                 "Baffin Bay", "Barents Sea"))) %>%
+  group_by(LME, year) %>% # Median per year
   summarise(NASC_median = median(NASC_int, na.rm = T),
             NASC_mean = mean(NASC_int, na.rm = T),
             NASC_q025 = quantile(NASC_int, 0.025),
             NASC_q975 = quantile(NASC_int, 0.975)) %>%
   ungroup() %>%
-  group_by(IHO_area) %>% # Mean per area
+  group_by(LME) %>% # Mean per area
   summarise(NASC_median = mean(NASC_median, na.rm = T),
             NASC_mean = mean(NASC_mean, na.rm = T),
             NASC_q025 = min(NASC_q025, na.rm = T),
             NASC_q975 = max(NASC_q975, na.rm = T)) %>%
   ungroup() %>%
-  ggplot(aes(x = IHO_area)) +
-  geom_point(aes(y = 10*log10(NASC_mean)), shape = 18, size = 4.5, col = "black") +
-  geom_pointrange(aes(y = 10*log10(NASC_median),
-                      ymin = 10*log10(NASC_q025), 
-                      ymax = 10*log10(NASC_q975)),
+  ggplot(aes(x = LME)) +
+  geom_point(aes(y = 10 * log10(NASC_mean)), 
+             shape = 18, size = 4.5, col = "black") +
+  geom_pointrange(aes(y = 10 * log10(NASC_median),
+                      ymin = 10 * log10(NASC_q025), 
+                      ymax = 10 * log10(NASC_q975)),
                   col = "black", fill = "white", shape = 21) +
   scale_y_continuous(
     expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")"),
@@ -830,11 +838,7 @@ pointrange_NASC <- SA_grid_laea %>% # Pointrange of SA per region
       sec_axis(trans = ~10^(./10), 
                name = expression("s"[A]*" ( m"^2*" nmi"^-2*")"),
                breaks = c(1, 5, 10, 50, 100, 500, 1000, 5000, 10000, 50000))) +
-    # trans = "log10") +
-  theme(#panel.border = element_blank(),
-        # panel.grid.major.y = element_line(colour = "grey90"),
-        axis.title.x = element_blank(),
-        # axis.line = element_line(),
+  theme(axis.title.x = element_blank(),
         plot.margin = unit(c(0.1, 0.1, 0, 0), "in"))
 # Combine plots
 p_map_pointrange_NASC <- plot_grid(pointrange_NASC, map_DSL,
@@ -850,23 +854,21 @@ p_map_pointrange_NASC
 
 ```{r fig3-boxplot}
 boxplot_NASC <- SA_grid_laea %>% # Pointrange of SA per region
-  mutate(IHO_area = factor(
-    case_when(
-    IHO_area == "East Arctic Ocean" ~ "EAO",
-    IHO_area == "West Arctic Ocean" ~ "WAO",
-    IHO_area == "Beaufort Sea" ~ "BF",
-    IHO_area == "The Northwestern Passages" ~ "CAA",
-    IHO_area == "Baffin Bay" ~ "BB",
-    IHO_area == "Davis Strait" ~ "DS"),
-    levels = c("WAO", "BF", "CAA", "BB", "DS", "EAO")), 
+  mutate(LME = factor(case_when(LME == "BF" ~ "Beaufort Sea",
+                                LME == "NAR" ~ "Nares Strait",
+                                LME == "BB" ~ "Baffin Bay",
+                                LME == "SV" ~ "Barents Sea"),
+                      levels = c("Beaufort Sea", "Nares Strait", 
+                                 "Baffin Bay", "Barents Sea")),
     year = factor(year)) %>%
-  ggplot(aes(x = IHO_area)) +
+  ggplot(aes(x = LME)) +
   geom_boxplot(aes(y = SA_int, fill = year), size = 0.4, outlier.size = 0.7,
                alpha = 0.8, position = position_dodge(preserve = "single")) +
-  scale_fill_manual(values = c("#0086a8", "#f6c200", "#d04e00")) +
+  scale_fill_manual(values = met.brewer("Johnson", n = 6, direction = -1)) + 
+                      # c("#0086a8", "#f6c200", "#d04e00")) +
   scale_y_continuous(
     expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")"),
-    position = "right",
+    position = "left",
     sec.axis = 
       sec_axis(trans = ~10^(./10), 
                name = expression("s"[A]*" ( m"^2*" nmi"^-2*")"),
@@ -886,45 +888,39 @@ boxplot_NASC
 
 ```{r fig3-points}
 pointrange_NASC <- SA_grid_laea %>% # Pointrange of SA per region
-  mutate(IHO_area = factor(
-    case_when(
-    IHO_area == "East Arctic Ocean" ~ "EAO",
-    IHO_area == "West Arctic Ocean" ~ "WAO",
-    IHO_area == "Beaufort Sea" ~ "BF",
-    IHO_area == "The Northwestern Passages" ~ "CAA",
-    IHO_area == "Baffin Bay" ~ "BB",
-    IHO_area == "Davis Strait" ~ "DS"),
-    levels = c("WAO", "BF", "CAA", "BB", "DS", "EAO"))) %>%
-  group_by(IHO_area, year) %>% # Median per year
+  mutate(LME = factor(case_when(LME == "BF" ~ "Beaufort Sea",
+                                LME == "NAR" ~ "Nares Strait",
+                                LME == "BB" ~ "Baffin Bay",
+                                LME == "SV" ~ "Barents Sea"),
+                      levels = c("Beaufort Sea", "Nares Strait", 
+                                 "Baffin Bay", "Barents Sea"))) %>%
+  group_by(LME, year) %>% # Median per year
   summarise(NASC_median = median(NASC_int, na.rm = T),
             NASC_mean = mean(NASC_int, na.rm = T),
             NASC_q025 = quantile(NASC_int, 0.025),
             NASC_q975 = quantile(NASC_int, 0.975)) %>%
   ungroup() %>%
-  group_by(IHO_area) %>% # Mean per area
+  group_by(LME) %>% # Mean per area
   summarise(NASC_median = mean(NASC_median, na.rm = T),
             NASC_mean = mean(NASC_mean, na.rm = T),
             NASC_q025 = min(NASC_q025, na.rm = T),
             NASC_q975 = max(NASC_q975, na.rm = T)) %>%
   ungroup() %>%
-  ggplot(aes(x = IHO_area)) +
-  geom_point(aes(y = 10*log10(NASC_mean)), shape = 18, size = 4.5, col = "black") +
-  geom_pointrange(aes(y = 10*log10(NASC_median),
-                      ymin = 10*log10(NASC_q025), 
-                      ymax = 10*log10(NASC_q975)),
+  ggplot(aes(x = LME)) +
+  geom_point(aes(y = 10 * log10(NASC_mean)), 
+             shape = 18, size = 4.5, col = "black") +
+  geom_pointrange(aes(y = 10 * log10(NASC_median),
+                      ymin = 10 * log10(NASC_q025), 
+                      ymax = 10 * log10(NASC_q975)),
                   col = "black", fill = "white", shape = 21) +
   scale_y_continuous(
     expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")"),
-    position = "right",
+    position = "left",
     sec.axis = 
       sec_axis(trans = ~10^(./10), 
                name = expression("s"[A]*" ( m"^2*" nmi"^-2*")"),
                breaks = c(1, 5, 10, 50, 100, 500, 1000, 5000, 10000))) +
-    # trans = "log10") +
-  theme(#panel.border = element_blank(),
-        # panel.grid.major.y = element_line(colour = "grey90"),
-        axis.title.x = element_blank(),
-        # axis.line = element_line(),
+  theme(axis.title.x = element_blank(),
         plot.margin = unit(c(0.1, 0.1, 0, 0), "in"))
 # Save and display plot
 ggsave("plots/Fig3_pointrange_NASC.png", pointrange_NASC, 
@@ -947,10 +943,6 @@ trawl_area_df <- trawl %>%
   st_drop_geometry() %>%
   mutate(LME = if_else(LME == "CAO" & lon > 0, "SV",
                if_else(LME == "CAO" & lon < 0, "BF", LME))) %>%
-  # rename(IHO_area = name, area = area.x) %>%
-  # dplyr::select(-fname, -id, -longitude, -latitude, -min_x, -min_y, -max_x, 
-  #               -max_y, -area.y, -mrgid, -bearings, -name_1, -mrgid_1, -name_2,
-  #               -mrgid_2, -name_3, -mrgid_3) %>%
   # Calculate number of individual for each species per IHO region
   group_by(LME, fish_species) %>% 
   summarise(number_fish = sum(number_fish)) %>%
@@ -994,34 +986,24 @@ trawl_area_df <- trawl %>%
 
 ```{r realtive-abundance-station}
 trawl_station_df <- trawl %>%
-  # Find IHO area for each trawl deployment
+  # Find LME for each trawl deployment
   st_as_sf(coords = c("lon", "lat"), crs = st_crs(arctic_latlon),
            remove = F) %>%
-  st_join(., LME_sf_latlon, join = st_within) %>% # Append IHO region
+  st_join(., LME_sf_latlon, join = st_within) %>% # Append LME
   st_transform(crs = st_crs(arctic_laea)) %>% # Change projection
   mutate(xc = st_coordinates(.)[,1],
          yc = st_coordinates(.)[,2]) %>%
   st_drop_geometry() %>%
-  mutate(#name = if_else(name == "The Northwestern Passages" & lon > -90, "Baffin Bay",
-  #               if_else(name == "Arctic Ocean" & name_3 == "West Arctic Ocean", "West Arctic Ocean",
-  #               if_else(name == "Arctic Ocean" & name_3 == "East Arctic Ocean", "East Arctic Ocean", name))),
-  #        IHO_area = case_when(name == "East Arctic Ocean" ~ "EAO",
-  #                             name == "West Arctic Ocean" ~ "WAO",
-  #                             name == "Beaufort Sea" ~ "BF",
-  #                             name == "The Northwestern Passages" ~ "CAA",
-  #                             name == "Baffin Bay" ~ "BB",
-  #                             name == "Davis Strait" ~ "DS"),
-         fish_species2 = case_when(
-           fish_species == "boreogadus_saida" ~ "Arctic cod",
-           fish_species == "liparidae" ~ "Snailfish",
-           fish_species == "myctophidae" ~ "Lanternfish",
-           fish_species == "sebastes_sp" ~ "Redfish",
-           !fish_species %in% c("boreogadus_saida", "liparidae", "myctophidae", "sebastes_sp") ~ "Other")) %>%
-  # dplyr::select(-name, -fname, -id, -longitude, -latitude, -min_x, -min_y,
-  #               -max_x, -max_y, -area.y, -mrgid, -bearings, -name_1, -mrgid_1, 
-  #               -name_2,-mrgid_2, -name_3, -mrgid_3) %>%
+  mutate(fish_species2 = case_when(
+    fish_species == "boreogadus_saida" ~ "Arctic cod",
+    fish_species == "liparidae" ~ "Snailfish",
+    fish_species == "myctophidae" ~ "Lanternfish",
+    fish_species == "sebastes_sp" ~ "Redfish",
+    !fish_species %in% c("boreogadus_saida", "liparidae", 
+                         "myctophidae", "sebastes_sp") ~ "Other")) %>%
   # Calculate number of individual for each species per station
-  group_by(year, LME, date, station, deployment, lat, lon, xc, yc, fish_species2) %>% 
+  group_by(year, LME, date, station, deployment, lat,
+           lon, xc, yc, fish_species2) %>% 
   summarise(number_fish = sum(number_fish)) %>%
   ungroup() %>%
   # Calculate total number of fish per station
@@ -1031,7 +1013,8 @@ trawl_station_df <- trawl %>%
   # Calculate relative abundance per station
   mutate(RA = (number_fish / total_fish) * 100) %>%
   dplyr::select(year, LME, xc, yc, RA, fish_species2) %>% 
-  pivot_wider(names_from = fish_species2, values_from = RA, values_fill = 0) %>%
+  pivot_wider(names_from = fish_species2, values_from = RA, 
+              values_fill = 0) %>%
   # Jitter coordinates to avoid overplotting
   mutate(row = seq(1, 18, 1),
          xc_jit = case_when(xc == xc[1] & yc == yc[1] ~ xc[1],
@@ -1135,7 +1118,8 @@ map_RA <- trawl_station_df %>%
                            "Other"),
                   alpha = 0.9, pie_scale = 1.5, legend_name = "Species", 
                   colour = "white", size = 0.2) +
-  # geom_text(aes(x = xc_jit, y = yc_jit, label = row), size = 2, col = "green") +
+  # geom_text(aes(x = xc_jit, y = yc_jit, label = row), size = 2,
+  # col = "green") +
   scale_fill_manual(values = met.brewer("Johnson", n = 5, direction = -1)) +
   coord_fixed(xlim = c(-2450, 650), ylim = c(-1500, 1850), expand = F) +
   geom_point(aes(x = 0, y = 0), size = 0.05) +
@@ -1164,20 +1148,22 @@ ggsave("plots/Table1_RA_map.png", table1_RA,
 ### Without map
 
 ```{r LM-SA-latitude}
+col_pal <- c("#132B69", "#03739B", "#93AA43", "black")
 lm_SA_lat <- LM_area_res %>%
   ggplot() + 
-  geom_point(aes(x = lat, y = SA_int, col = LME), alpha = 0.5, size = 1) +
+  geom_point(data = SA_lm, aes(x = lat, y = SA_int, col = LME, shape = shape),
+             alpha = 0.7, size = 1) +
   geom_line(aes(x = lat, y = .fitted, col = LME), size = 0.6) + 
-  geom_ribbon(aes(x = lat, ymin = .lower, ymax = .upper, group = LME, fill = LME),
+  geom_ribbon(aes(x = lat, ymin = .lower, ymax = .upper,
+                  group = LME, fill = LME),
               alpha = 0.1) +
   scale_x_continuous("Latitude (°N)", breaks = seq(0, 90, 2)) + 
   scale_y_continuous(expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")")) + 
-  scale_colour_manual("Region", values = met.brewer("Johnson", n = 6,
-                                                    direction = -1)) +
-  scale_fill_manual("Region", values = met.brewer("Johnson", n = 6, 
-                                                  direction = -1)) +
+  scale_shape_manual(values = c(17, 16)) +
+  scale_colour_manual("LME", values = col_pal) +
+  scale_fill_manual("LME", values = col_pal) +
   coord_cartesian(ylim = c(-5, 45)) +
-  guides(colour = guide_legend(nrow = 1, byrow = T)) +
+  guides(fill = "none", shape = "none") +
   theme(legend.position = "top", 
         legend.title = element_blank(),
         legend.key.height = unit(0.15, "in"), 
@@ -1186,7 +1172,7 @@ lm_SA_lat <- LM_area_res %>%
         axis.line = element_line())
 # Save and display plot
 ggsave("plots/Figure_LM_SA_lat.png", lm_SA_lat, 
-       height = 2.25, width = 3.55, dpi = 600, units = "in")
+       height = 2.25, width = 4.5, dpi = 600, units = "in")
 lm_SA_lat
 ```
 
@@ -1211,7 +1197,7 @@ map_DSL <- SA_grid_laea %>%
                        option = "viridis",
                        labels = c("< 1", "1-10", "11-100", "101-500",
                                   "501-1000", "> 1000")) +
-  geom_point(aes(x = 0, y = 0), size = 0.05) +
+  # geom_point(aes(x = 0, y = 0), size = 0.05) +
   facet_wrap(~ year) +
   coord_fixed(xlim = c(-2450, 650), ylim = c(-1500, 1850), expand = F) +
   theme(legend.position = "right",
@@ -1221,23 +1207,22 @@ map_DSL <- SA_grid_laea %>%
         axis.ticks = element_blank(),
         axis.title = element_blank())
 # LM
+col_pal <- c("#132B69", "#03739B", "#93AA43", "black")
 lm_SA_lat <- LM_area_res %>%
-  mutate(LME = factor(case_when(LME == "BF" ~ "Beaufort Sea",
-                                LME == "BB" ~ "Baffin Bay",
-                                LME == "SV" ~ "Barents Sea"),
-                      levels = c("Beaufort Sea", "Baffin Bay", "Barents Sea"))) %>%
   ggplot() + 
-  geom_point(aes(x = lat, y = SA_int, col = LME), alpha = 0.5, size = 1) +
+  geom_point(data = SA_lm, aes(x = lat, y = SA_int, col = LME, shape = shape),
+             alpha = 0.7, size = 1) +
   geom_line(aes(x = lat, y = .fitted, col = LME), size = 0.6) + 
-  geom_ribbon(aes(x = lat, ymin = .lower, ymax = .upper, group = LME, fill = LME),
+  geom_ribbon(aes(x = lat, ymin = .lower, ymax = .upper,
+                  group = LME, fill = LME),
               alpha = 0.1) +
   scale_x_continuous("Latitude (°N)", breaks = seq(0, 90, 2)) + 
   scale_y_continuous(expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")")) + 
-  scale_colour_manual("Region", values = met.brewer("Johnson", n = 6, 
-                                                    direction = -1)) +
-  scale_fill_manual("Region", values = met.brewer("Johnson", n = 6,
-                                                  direction = -1)) +
-  coord_cartesian(ylim = c(-2, 45)) +
+  scale_shape_manual(values = c(17, 16)) +
+  scale_colour_manual("LME", values = col_pal) +
+  scale_fill_manual("LME", values = col_pal) +
+  coord_cartesian(ylim = c(-5, 45)) +
+  guides(fill = "none", shape = "none") +
   theme(legend.position = "right", 
         legend.title = element_blank(),
         legend.key.height = unit(0.15, "in"), 
@@ -1245,12 +1230,13 @@ lm_SA_lat <- LM_area_res %>%
         panel.border = element_blank(),
         axis.line = element_line())
 # Combine plots
-p_map_NASC_LM <- plot_grid(map_DSL, lm_SA_lat,
+p_map_NASC_LM <- plot_grid(map_DSL, lm_SA_lat, rel_heights = c(1, 0.8),
                            ncol = 1, align = "v", axis = "lr",
-                           labels = "auto", label_size = 9, label_y = c(0.9, 1)) 
+                           labels = "auto", label_size = 9, 
+                           label_y = c(0.9, 1.05)) 
 # Save and display plot
 ggsave("plots/Fig3_map_LM_NASC.png", p_map_NASC_LM, 
-       height = 5, width = 6.5, dpi = 600, units = "in")
+       height = 4, width = 6.5, dpi = 600, units = "in")
 p_map_NASC_LM
 ```
 
@@ -1259,20 +1245,18 @@ p_map_NASC_LM
 ```{r HGAM-plot}
 # GAM velocity
 GAMSAI_velo <- predSA_I %>%
-  mutate(LME = factor(case_when(LME == "BF" ~ "Beaufort Sea",
-                                LME == "BB" ~ "Baffin Bay",
-                                LME == "SV" ~ "Barents Sea"),
-                      levels = c("Beaufort Sea", "Baffin Bay", "Barents Sea"))) %>%
   filter(var == "v") %>%
   ggplot() +
+  # geom_point(data = SA_df, aes(x = v, y = SA_int, col = LME), alpha = 0.5) +
   geom_line(aes(x = v, y = fitted, col = LME), size = 0.6) +
   geom_ribbon(aes(x = v, ymin = lwr_ci, ymax = upr_ci, fill = LME), 
               alpha = 0.1) +
-  scale_colour_manual(values = met.brewer("Johnson", n = 6, direction = -1)) +
-  scale_fill_manual(values = met.brewer("Johnson", n = 6, direction = -1)) +
-  coord_cartesian(xlim = c(0, 4.1), ylim = c(0, 30)) +
+  scale_colour_manual(name = "LME",
+                      values = met.brewer("Johnson", n = 6, direction = -1)) +
+  scale_fill_manual(name = "LME",
+                    values = met.brewer("Johnson", n = 6, direction = -1)) +
+  coord_cartesian(xlim = c(-0.1, 4.1), ylim = c(-2, 32), expand = F) +
   scale_x_continuous(breaks = seq(0, 10, 0.5)) +
-  # scale_y_continuous(breaks = seq(0, 30, 5)) +
   scale_y_continuous(
     expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")"),
     position = "left",
@@ -1281,7 +1265,7 @@ GAMSAI_velo <- predSA_I %>%
                name = expression("s"[A]*" ( m"^2*" nmi"^-2*")"),
                breaks = c(1, 5, 10, 50, 100, 500, 1000, 5000, 10000))) +
 
-  labs(x = expression("Mean velocity at 380 m (cm s"^-1*")"),
+  labs(x = expression("Mean velocity at 318 m (cm s"^-1*")"),
        y = expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")")) +
   guides(linetype = "none") +
   theme(panel.border = element_blank(),
